--- a/public/offline.html
+++ b/public/offline.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offline - Movie Recommendations</title>
     <!-- Tailwind CSS CDN for styling -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="../src/index.css" rel="stylesheet"/>
+    
     <style>
         body {
             font-family: 'Inter', sans-serif;
